--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,230 @@
 
   </head>
   <body>
+      <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-8 col-sm-push-2">
+              <h1 class="text-center">Crib Simulator</h1>
+              <hr/>
+              <br/>
+            </div>
+          </div>
 
-    Reptoken
-    <br />
-    <button type="button" class="btn">Lists Accounts</button>
+          <div class="panel panel-default">
 
-    <div id="RPCaccounts"></div>
+            <div class="panel-heading">
+                <h3 class="panel-title">Transaction Platform</h3>
+            </div>
+
+            <div class="panel-body">
+
+                <table class="table table-hover">
+                  <thead>
+                    <!-- ROW START -->
+                    <tr>
+                      <th>Host</th>
+                      <th>Guest</th>
+                      <th>Transaction</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+
+                    <!-- ROW START -->
+                    <tr>
+                      <td>
+                          <div class="dropdown">
+                            <button class="btn btn-default dropdown-toggle"
+                                    type="button" id="dropdownMenu1"
+                                    data-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="true">
+                              Select Host
+                              <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu"
+                                aria-labelledby="dropdownMenu1">
+                              <li><a href="#">Guest 1</a></li>
+                              <li><a href="#">Guest 2</a></li>
+                              <li><a href="#">Guest 3</a></li>
+                            </ul>
+                          </div>
+                      </td>
+                      <td>
+                          <div class="dropdown">
+                            <button class="btn btn-default dropdown-toggle"
+                                    type="button" id="dropdownMenu1"
+                                    data-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="true">
+                              Select Guest
+                              <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu"
+                                aria-labelledby="dropdownMenu1">
+                              <li><a href="#">Guest 1</a></li>
+                              <li><a href="#">Guest 2</a></li>
+                              <li><a href="#">Guest 3</a></li>
+                            </ul>
+                          </div>
+                      </td>
+                      <td>
+                          <button class="btn btn-primary btn-sm">Sign</button>
+                      </td>
+                    </tr>
+                    <!-- ROW END -->
+
+
+
+                    <!-- ROW START -->
+                    <tr>
+                      <td>
+                          <div class="dropdown">
+                            <button class="btn btn-default dropdown-toggle"
+                                    type="button" id="dropdownMenu1"
+                                    data-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="true">
+                              Select Host
+                              <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu"
+                                aria-labelledby="dropdownMenu1">
+                              <li><a href="#">Guest 1</a></li>
+                              <li><a href="#">Guest 2</a></li>
+                              <li><a href="#">Guest 3</a></li>
+                            </ul>
+                          </div>
+                      </td>
+                      <td>
+                          <div class="dropdown">
+                            <button class="btn btn-default dropdown-toggle"
+                                    type="button" id="dropdownMenu1"
+                                    data-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="true">
+                              Select Guest
+                              <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu"
+                                aria-labelledby="dropdownMenu1">
+                              <li><a href="#">Guest 1</a></li>
+                              <li><a href="#">Guest 2</a></li>
+                              <li><a href="#">Guest 3</a></li>
+                            </ul>
+                          </div>
+                      </td>
+                      <td>
+                          <button class="btn btn-primary btn-sm">Sign</button>
+                      </td>
+                    </tr>
+                    <!-- ROW END -->
+
+
+
+                    <!-- ROW START -->
+                    <tr>
+                      <td>
+                          <div class="dropdown">
+                            <button class="btn btn-default dropdown-toggle"
+                                    type="button" id="dropdownMenu1"
+                                    data-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="true">
+                              Select Host
+                              <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu"
+                                aria-labelledby="dropdownMenu1">
+                              <li><a href="#">Guest 1</a></li>
+                              <li><a href="#">Guest 2</a></li>
+                              <li><a href="#">Guest 3</a></li>
+                            </ul>
+                          </div>
+                      </td>
+                      <td>
+                          <div class="dropdown">
+                            <button class="btn btn-default dropdown-toggle"
+                                    type="button" id="dropdownMenu1"
+                                    data-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="true">
+                              Select Guest
+                              <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu"
+                                aria-labelledby="dropdownMenu1">
+                              <li><a href="#">Guest 1</a></li>
+                              <li><a href="#">Guest 2</a></li>
+                              <li><a href="#">Guest 3</a></li>
+                            </ul>
+                          </div>
+                      </td>
+                      <td>
+                          <button class="btn btn-primary btn-sm">Sign</button>
+                      </td>
+                    </tr>
+                    <!-- ROW END -->
+                  </tbody>
+                  <tfoot>
+                    <!-- ROW START -->
+                    <tr>
+                      <td>Default</td>
+                      <td>Default</td>
+                      <td><button class="btn btn-default" type="button" id="signAll">
+                             Sign All
+                          </button>
+                      </td>
+                    </tr>
+                  </tfoot>
+                </table>
+
+            <!-- END PANEL BODY -->
+            </div>
+            
+        <!-- END PANEL -->
+        </div>
+
+
+          <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title">Platform Summary</h3>
+              </div>
+              <div class="panel-body">
+                  <table class="table table-hover">
+                    <thead>
+                      <!-- ROW START -->
+                      <tr>
+                        <th>Total Transactions</th>
+                        <th>Fees</th>
+                        <th>Parameter</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <!-- ROW START -->
+                      <tr><td>Item</td></tr>
+                    </tbody>
+                  </table>
+              </div>
+          </div>
+
+          <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title">Transaction Hashes</h3>
+              </div>
+              <div class="panel-body">
+                  <table class="table table-hover">
+                    <thead>
+                      <!-- ROW START -->
+                      <tr>
+                        <th>Transaction ID</th>
+                        <th>Block</th>
+                        <th>HASH</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <!-- ROW START -->
+                      <tr><td>Item</td><td>Item</td><td>View Details</td></tr>
+                    </tbody>
+                  </table>
+              </div>
+          </div>
+
+      <!-- END CONTAINER -->
+      </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or
