--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,9 @@
                   <thead>
                     <!-- ROW START -->
                     <tr>
-                      <th>Number</th>
-                      <th>Host</th>
-                      <th>Guest</th>
+                      <th>Event</th>
+                      <th>Select Host</th>
+                      <th>Select Guest</th>
                       <th>Transaction</th>
                     </tr>
                   </thead>
@@ -123,6 +123,7 @@
     <script src="js/web3.min.js"></script>
     <script src="js/truffle-contract.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/platform_function.js"></script>
     <script src="js/platform_template.js"></script>
   </body>
 </html>
