--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/table.css" rel="stylesheet">
 
   </head>
   <body>
@@ -116,7 +117,10 @@
       <!-- END CONTAINER -->
       </div>
 
+    <!--
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    -->
+    <script src="js/jq_1.9.1.min.js"></script>
     <!-- Include all compiled plugins (below), or
          include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
