--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,18 @@
               <br/>
             </div>
           </div>
-
         <div class="panel panel-default">
 
             <div class="panel-heading">
                 <h3 class="panel-title">Transaction Platform</h3>
+
+                <!-- *-------------------------* -->
+                <!-- Branch "transactionCounter" -->
+                <p class="text-left">Transaction counter:
+                    <span id="transactionCounter">0</span>
+                </p>
+                <!-- *-------------------------* -->
+
             </div>
 
             <div class="panel-body">
