Work ongoing for random init

--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,10 @@
         <div class="panel panel-default">
 
             <div class="panel-heading">
-                <p class="text-left">Transaction counter:
-                    <span id="transactionCounter">0</span>
-                </p>
+                Transaction counter:
+                <span id="transactionCounter">0</span>
+                <button class="btn btn-init"
+                        type="button" id="init">Init</button>
             </div>
 
             <div class="panel-body">
@@ -46,7 +47,7 @@
 
                   <!-- **************************** -->
                   <!-- Populated by App.populate(). -->
-                  <tbody id="hostGuestTable">
+                  <tbody class="table-body" id="hostGuestTable">
                   </tbody>
                   <!-- **************************** -->
 
